Updated add order and order history page

--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -25,15 +25,15 @@
   <!-- begin::Footer -->
   <div class="d-flex flex-center flex-column-auto p-10">
     <div class="d-flex align-items-center fw-bold fs-6">
-      <a href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/terms"
+      <a href="{{ termsConditions }}"
         target="_blank" class="text-muted text-hover-primary px-2 cursor-pointer">
         Terms & Condtions
       </a>
-      <a href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/contact_us"
+      <a href="{{ contactUs }}"
         target="_blank" class="text-muted text-hover-primary px-2 cursor-pointer">
         Contact
       </a>
-      <a href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/privacy"
+      <a href="{{ privacyPolicy }}"
         target="_blank" class="text-muted text-hover-primary px-2 cursor-pointer">
         Privacy
       </a>
