--- a/src/app/modules/errors/errors.component.html
+++ b/src/app/modules/errors/errors.component.html
@@ -35,19 +35,19 @@
   <div class="d-flex flex-center flex-column-auto p-10">
     <div class="d-flex align-items-center fw-bold fs-6">
       <a
-        href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/terms"
+        href="{{ termsConditions }}"
         class="text-muted text-hover-primary px-2"
       >
         Terms & Conditions
       </a>
       <a
-        href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/contact_us"
+        href="{{ contactUs }}"
         class="text-muted text-hover-primary px-2"
       >
         Contact
       </a>
       <a
-        href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/privacy"
+        href="{{ privacyPolicy }}"
         class="text-muted text-hover-primary px-2"
       >
         Privacy
