--- a/src/app/pages/order/order-history/order-history.component.html
+++ b/src/app/pages/order/order-history/order-history.component.html
@@ -67,6 +67,8 @@
         [rowData]="rowData"
         [enableCellChangeFlash]="true"
         [getRowStyle]="getRowStyle"
+        [ensureDomOrder]="true"
+        [enableCellTextSelection]="true"
         (gridReady)="onGridReady($event)"
     ></ag-grid-angular>
   </div>
