--- a/src/app/pages/payment/payment.component.html
+++ b/src/app/pages/payment/payment.component.html
@@ -114,38 +114,48 @@
       <!--begin::Body-->
       <div class="card-body py-12">
         <!--begin::Icon-->
-        <a href="#" class="mx-4">
-          <img src="assets/media/svg/brand-logos/facebook-4.svg" class="h-30px my-2" alt="" />
+        <!-- <a href="#" class="mx-4">
+          <img src="assets/media/svg/payment-methods/visa.svg" class="h-30px my-2" alt="" />
+        </a> -->
+        <!--end::Icon-->
+        <!--begin::Icon-->
+        <!-- <a href="#" class="mx-4">
+          <img src="assets/media/svg/payment-methods/americanexpress.svg" class="h-30px my-2" alt="" />
+        </a> -->
+        <!--end::Icon-->
+        <!--begin::Icon-->
+        <!-- <a href="#" class="mx-4">
+          <img src="assets/media/svg/payment-methods/mastercard.svg" class="h-30px my-2" alt="" />
+        </a> -->
+        <!--end::Icon-->
+        <!--begin::Icon-->
+        <a title="Norton Secured" class="mx-4">
+          <img src="assets/media/svg/payment-methods/security_1.svg" class="h-30px my-2" alt="Norton Secured" />
         </a>
         <!--end::Icon-->
         <!--begin::Icon-->
-        <a href="#" class="mx-4">
-          <img src="assets/media/svg/brand-logos/instagram-2-1.svg" class="h-30px my-2" alt="" />
+        <a title="Visa" class="mx-4">
+          <img src="assets/media/svg/payment-methods/security_2.svg" class="h-30px my-2" alt="Visa" />
         </a>
         <!--end::Icon-->
         <!--begin::Icon-->
-        <a href="#" class="mx-4">
-          <img src="assets/media/svg/brand-logos/github.svg" class="h-30px my-2" alt="" />
+        <a title="MasterCard" class="mx-4">
+          <img src="assets/media/svg/payment-methods/security_3.svg" class="h-30px my-2" alt="MasterCard" />
         </a>
         <!--end::Icon-->
         <!--begin::Icon-->
-        <a href="#" class="mx-4">
-          <img src="assets/media/svg/brand-logos/behance.svg" class="h-30px my-2" alt="" />
+        <a title="PayU" class="mx-4">
+          <img src="assets/media/svg/payment-methods/security_4.svg" class="h-30px my-2" alt="PayU" />
         </a>
         <!--end::Icon-->
         <!--begin::Icon-->
-        <a href="#" class="mx-4">
-          <img src="assets/media/svg/brand-logos/pinterest-p.svg" class="h-30px my-2" alt="" />
+        <a title="AmericaExpress" class="mx-4">
+          <img src="assets/media/svg/payment-methods/security_5.svg" class="h-30px my-2" alt="AmericanExpress" />
         </a>
         <!--end::Icon-->
         <!--begin::Icon-->
-        <a href="#" class="mx-4">
-          <img src="assets/media/svg/brand-logos/twitter.svg" class="h-30px my-2" alt="" />
-        </a>
-        <!--end::Icon-->
-        <!--begin::Icon-->
-        <a href="#" class="mx-4">
-          <img src="assets/media/svg/brand-logos/dribbble-icon-1.svg" class="h-30px my-2" alt="" />
+        <a title="Data Security Standard" class="mx-4">
+          <img src="assets/media/svg/payment-methods/security_6.svg" class="h-30px my-2" alt="DSS" />
         </a>
         <!--end::Icon-->
       </div>
