--- a/src/app/_metronic/layout/components/footer/footer.component.html
+++ b/src/app/_metronic/layout/components/footer/footer.component.html
@@ -14,7 +14,7 @@
   <ul class="menu menu-gray-600 menu-hover-primary fw-bold order-1">
     <li class="menu-item">
       <a
-        href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/refund"
+        href="{{ refundPolicy }}"
         target="_blank"
         class="menu-link ps-0 pe-2 cursor-pointer"
       >
@@ -23,7 +23,7 @@
     </li>
     <li class="menu-item">
       <a
-        href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/contact_us"
+        href="{{ contactUs }}"
         target="_blank"
         class="menu-link pe-0 pe-2 cursor-pointer"
       >
@@ -32,7 +32,7 @@
     </li>
     <li class="menu-item">
       <a
-        href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/privacy"
+        href="{{ privacyPolicy }}"
         target="_blank"
         class="menu-link pe-0 cursor-pointer"
       >
