--- a/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
+++ b/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
@@ -8,9 +8,9 @@
       <div class="d-flex flex-column">
         <div class="fw-bolder d-flex align-items-center fs-5">
           {{ _user.name }}
-          <span class="badge badge-light-success fw-bolder fs-8 px-2 py-1 ms-2"
+          <!-- <span class="badge badge-light-success fw-bolder fs-8 px-2 py-1 ms-2"
             >Pro</span
-          >
+          > -->
         </div>
         <a class="fw-bold text-muted text-hover-primary fs-7 cursor-pointer">
           {{ _user.email }}
@@ -29,7 +29,7 @@
   </div>
   -->
 
-  <div class="menu-item px-5">
+  <!-- <div class="menu-item px-5">
     <a class="menu-link px-5 cursor-pointer" placement="top-start" ngbTooltip="Coming soon">
       <span class="menu-text">My Projects</span>
       <span class="menu-badge">
@@ -149,7 +149,7 @@
         </a>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- Commenting for beta version release
   <div class="menu-item px-5 my-1">
     <a routerLink="/crafted/account/settings" class="menu-link px-5">
